configurable logging level

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ POSTGRES_USER=ew_user
 POSTGRES_PASSWORD=ew_password
 HOST_DB=db
 PORT_DB=5432
+# 0 - Panic, 1 - Fatal, 2 - Error, 3 - Warn, 4 - Info, 5 - Debug, 6 - Trace
+LOGGING_LEVEL=2
